[project]
name = "extract-positives"
version = "0.1.0"
description = "Extract audio corresponding to positives in buzzdetect results"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "soundfile",
    "pandas",
    "numpy",
]

[project.optional-dependencies]
wma = ["av"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
